# watchlib

./: .gitignore  README.md  data_handler.py  demo.ipynb  ecg.py  plot.py  requirements.txt  stats.py  watchlib_demonstrator.py  workout.py  workout_route.py
app/: .gitignore
app/backend/: api.py  services.py  wsgi.py
beta-documentation/: README.md
beta-documentation/Data Handeling/: Data Handeling.md
beta-documentation/Data Types/: ECG.md  WorkoutRoute.md
beta-documentation/Filtering/: BBox.md  BBoxFilter.md  CountryFilter.md  FilterPipeline.md  TimeFilter.md
demonstrator/: watchlib_demonstrator.py
demos/: 01 - DataLoader.ipynb  02 - Animation.ipynb  02 - Workout Route.ipynb  03 - Electrocardiogram.ipynb  LICENSE  watchlib_demonstrator.py
watchlib/: __init__.py
watchlib-demos/: README.md
watchlib/analysis/: __init__.py  analysis_ecg_utils.py  analysis_utils.py  annoy.py  (+1 more)
watchml/: .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  requirements.txt  setup.cfg
watchml/docs/source/: about.rst  conf.py  index.rst  installation.rst  test.rst
watchml/docs/source/apidoc/: watchml.data.rst  watchml.file.rst  watchml.ml.rst  watchml.rst  watchml.utils.rst  watchml.viz.rst
watchml/src/watchml/: __init__.py
watchml/src/watchml/file/: __init__.py  file.py  loader.py  manager.py  reader.py  writer.py
watchml/src/watchml/ml/: __init__.py  baseline_nns.py  dist.py
watchml/src/watchml/utils/: __init__.py  constants.py  utils.py
watchml/src/watchml/viz/: __init__.py  workout_animation.py
wiki/: .gitignore  Filter.md
(+56 files in other folders)
